# pulse-website

./: .gitignore  Dockerfile  app.py  data_manipulation.py  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml  twitter_checker.py
nginx/: nginx.conf
website/: __init__.py  content_loader.py
website/static/css/: fonts.css  main.css  pluginsx.css  style.css
website/static/data/: projects.json
website/static/icons/: fontawesome-all.min.css
website/static/js/: cookieBar.js  main.js  pluginsx.js
website/templates/: index.html
