[tool.poetry]
name = "pulse_website"
version = "0.3.0"
description = ""
authors = ["CryptoRalph <doxter@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
requests-oauthlib = "^1.3.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
